--- a/public/style.css
+++ b/public/style.css
@@ -32,6 +32,5 @@ h3 {
 p {
     margin-left: 200px;
     margin-right: 200px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 10px;
 }
